2005-05-09  Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.c, gwlib/dbpool.c, gwlib/gw-prioqueue.c, gwlib/gwmem-check.c,
      gwlib/http.c, wap/wtls_pdu.h: changes that to make ISO strict compilers
      happy. Mostly: 'inline' -> '__inline'.

2005-05-09  Alexander Malysh <amalysh at kannel.org>
    * test/test_ppg.c: killled wait variable and use wait_seconds instead.

2005-05-09  Alexander Malysh <amalysh at kannel.org>
    * test/test_hmac.c: fixed build error when no openssl available.

2005-05-06  Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: build fixes for strict compillers.

2005-05-06  Alexander Malysh <amalysh at kannel.org>
    *  gwlib/octstr.h: fixed compiler warnings for strict compilers (e.g. HP-UX).

2005-05-05  Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwlib.c: fixed segfault while shutdown when memcheck used.

2005-05-05  Alexander Malysh <amalysh at kannel.org>
    * gwlib/dbpool.c: drop 'inline' from function declaration. They can't
      inlined anyway but produce errors with strict ansi compilers.

2005-05-05  Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed openssl detection for Mac OS X.

2005-04-22  Stipe Tolj  <stolj@wapme.de>
    * test/test_hmac.c: fixed compiler error of the automatic compilation test, 
      due to usage of HMAC_CTX_cleanup, whereas geodude still runs an openssl 
      version with the deprecated "old" HMAC_cleanup.
      
2005-04-21  Stipe Tolj  <stolj@wapme.de>
    * test/test_octstr_dump.c: added binary dump to file for files that contain
      hex values. Can be used to convert hex value blocks to binary files.
    * test/test_hmac.c: added file that implements HMAC calculation via openssl
      library. HMAC is used in authentication for OMA Prov documents.
      
2005-04-14  Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c, gw/wapbox.c, gwlib/cfg.def, gwlib/http.[ch], test/test_http.c,